manage overflow issue with scroll

--- a/src/components/Navbar/Navbar.module.scss
+++ b/src/components/Navbar/Navbar.module.scss
@@ -5,14 +5,12 @@
   height: 70px;
   z-index: 10;
   position: fixed;
-  overflow-x: hidden;
   top: 0;
-
   display: flex;
   flex-direction: row;
   justify-content: flex-end;
   align-items: center;
-
+  overflow: hidden;
   background: transparent;
 
   a {
