--- a/src/pages/About/About.module.scss
+++ b/src/pages/About/About.module.scss
@@ -1,4 +1,5 @@
 .about {
   min-height: 100vh;
+  max-width: 100vw;
   width: 100vw;
 }
