--- a/src/pages/Project/Project.module.scss
+++ b/src/pages/Project/Project.module.scss
@@ -1,4 +1,5 @@
 .project {
   min-height: 100vh;
+  max-width: 100vw;
   width: 100vw;
 }
